# vlr-scraper

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  scheduled.yml
examples/: scrape_past.rs
src/: client.rs  enums.rs  error.rs  events.rs  lib.rs  match.rs  matchlist.rs  models.rs  player_matchlist.rs  utils.rs
src/model/: common.rs  event.rs  event_matchlist.rs  match_detail.rs  match_item.rs  matchlist.rs  mod.rs  player.rs  team.rs
src/scraper/: events.rs  match_detail.rs  matchlist.rs  mod.rs  player.rs
src/vlr_scraper/: event_matchlist.rs  match_detail.rs  match_item.rs  matchlist.rs  mod.rs  player.rs  team.rs
src/vlr_scraper/events/: list.rs  matchlist.rs  mod.rs
src/vlr_scraper/matches/: detail.rs  mod.rs
src/vlr_scraper/players/: info.rs  matchlist.rs  mod.rs
src/vlr_scraper/teams/: info.rs  matchlist.rs  mod.rs  transactions.rs
