[package]
name = "vlr-scraper"
version = "0.2.0"
edition = "2021"
description = "A Rust library for scraping Valorant esports data from vlr.gg"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
itertools = "0.14"
reqwest = "0.13"
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.cargo-machete]
ignored = ["strum"]
